# py-tray-command-launcher

./: .gitignore  .hermes_tmp_prompt.txt  AGENTS.md  BUILD.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.txt  command_executor.py  commands.json  install_packages.sh  main.py  nohup.out  output_window.py  py-tray-command-launcher.spec  pyproject.toml  requirements-build.txt  requirements.txt  tray_app.py  utils.py
.github/: copilot-instructions.md  dependabot.yml
.github/skills/add-feature-module/: SKILL.md
.github/skills/build-and-package/: SKILL.md
.github/skills/debug-tray-app/: SKILL.md
.github/skills/openspec-apply-change/: SKILL.md
.github/skills/work-with-themes/: SKILL.md
.github/skills/write-tests/: SKILL.md
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml  tests.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
config/: commands.json  commands.schema.json  history.json  orchestrator.yml  settings.schema.json  win-commands.json
docs/: architecture.md  configuration.md  contributing.md  features.md  packaging.md
docs/add/: ADD-001-configuration-storage-and-platform-paths.md  ADD-002-singleton-config-manager.md  ADD-003-dependency-injection-via-appservices.md  ADD-004-command-schema-and-validation.md  ADD-005-atomic-json-writes.md  ADD-006-menu-builder-decomposition.md  ADD-007-icon-resolver-and-cache.md  ADD-008-single-instance-locking.md  ADD-009-command-execution-strategies.md  ADD-010-theming-via-qss.md  ADD-011-command-palette-and-global-hotkeys.md  ADD-012-favorites-path-encoding.md  ADD-013-file-encryption.md  ADD-014-scheduling-via-cron.md  ADD-015-app-discovery-desktop-files.md  README.md
packaging/: py-tray-command-launcher.desktop
resources/themes/: dark.qss  light.qss
scripts/: build-all.sh  build-appimage.sh  build-deb.sh  build-linux.sh  build-windows.bat  install_packages.sh  lint.sh
src/: command_executor.py  dialogs.py  main.py  output_window.py  tray_app.py  utils.py
src/core/: config_manager.py  icon_resolver.py  logging_config.py  menu_builder.py  output_window.py  services.py  theme_manager.py  tray_app.py
src/modules/: app_discovery.py  backup_restore.py  command_creator.py  command_executor.py  command_history.py  command_search.py  favorites.py  file_encryptor.py  import_export.py  schedule_creator.py  schedule_viewer.py
src/ui/: __init__.py  command_manager.py  command_palette.py  output_window.py  quick_launch_bar.py  settings_dialog.py
src/utils/: dialogs.py  single_instance.py  utils.py
tests/: conftest.py  test_app_discovery.py  test_backup_restore.py  test_command_executor.py  test_command_history.py  test_command_palette.py  test_command_search.py  test_config_manager.py  test_config_path_consistency.py  test_favorites.py  test_favorites_path.py  test_file_encryptor.py  test_icon_resolver.py  test_import_export.py  test_issue_58_specific_exceptions.py  test_logging_config.py  test_quick_launch_bar.py  test_schedule_creator.py  test_settings_dialog.py  test_single_instance.py  test_tray_app.py  test_ui_command_manager.py  test_ui_command_palette.py  test_ui_output_window.py  test_ui_quick_launch_bar.py  test_ui_settings_dialog.py
