[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "py-tray-command-launcher"
version = "1.0.0"
description = "A system tray command launcher built with PyQt6"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "PyQt6>=6.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = [
    "E501",   # line length — handled by formatter
    "S602",   # subprocess with shell=True — intentional in CommandExecutor (user-authored commands only)
    "S603",   # subprocess without shell — low-risk in this context (fixed args, no user string interpolation)
    "S606",   # os.startfile — intentional launch of user-configured file path on Windows
    "S607",   # partial executable path (open, xdg-open) — platform helpers, not user input
]
