[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "py-tray-command-launcher"
version = "1.0.0"
description = "A system tray command launcher built with PyQt6"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "PyQt6>=6.11.0",
    "cryptography>=48.0.0",
    "rapidfuzz>=3.14.5",
    "pynput>=1.8.2",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/ui --cov-report=term-missing --cov-fail-under=60"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = [
    "E501",   # line length — handled by formatter
    "S602",   # subprocess with shell=True — intentional in CommandExecutor (user-authored commands only)
    "S603",   # subprocess without shell — low-risk in this context (fixed args, no user string interpolation)
    "S606",   # os.startfile — intentional launch of user-configured file path on Windows
    "S607",   # partial executable path (open, xdg-open) — platform helpers, not user input
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",   # assert is the correct assertion mechanism in pytest tests
    "S108",   # hardcoded /tmp paths are acceptable in tests (not production code)
    "S105",   # hardcoded test passwords are intentional fixture values
    "S324",   # insecure hash in tests is testing the implementation, not production use
    "S604",   # shell=True in test fixtures mirrors the implementation under test
    "E402",   # sys.modules injection for PyQt6 stubs must precede src imports
    "E701",   # single-line stub classes (pass) in test setup blocks are idiomatic
]
